feat: add datagrid

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,11 @@
     "prettier"
   ],
   "rules": {
-    "no-html-link-for-pages": "off"
+    "no-html-link-for-pages": "off",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-empty-object-type": "warn"
   },
   "settings": {
     "next": {
