--- a/package.json
+++ b/package.json
@@ -48,12 +48,16 @@
     "electron:test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "5.22.0",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@silevis/reactgrid": "^4.1.12",
+    "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "electron-serve": "^1.3.0",
@@ -61,11 +65,13 @@
     "fs": "^0.0.1-security",
     "knex": "^3.1.0",
     "lucide-react": "^0.460.0",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "next": "15.0.3",
     "next-themes": "^0.3.0",
     "prisma": "^5.22.0",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-data-grid": "^7.0.0-beta.47",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.5.2",
